<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="accept">Accept</string>
    <string name="action_reply">Reply</string>
    <string name="action_settings">setting</string>
    <string name="action_share">Share</string>
    <string name="add_poi_add">Add</string>
    <string name="add_poi_latitude">Latitude</string>
    <string name="add_poi_latitude_hint">Latitude</string>
    <string name="add_poi_longitude">Longitude</string>
    <string name="add_poi_longitude_hint">Longitude</string>
    <string name="add_poi_title">Title</string>
    <string name="add_poi_title_hint">Poi name</string>
    <string name="add_widget">Add widget</string>
    <string name="app_name">MideaNews</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="close">close</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="main_add_poi">Add poi</string>
    <string name="main_latitude">Latitude</string>
    <string name="main_longitude">Longitude</string>
    <string name="main_search">Search</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="open">open</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_dream_text_default">zzzZZZzzz</string>
    <string name="pref_dream_text_key">pref_dream_text</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="hello_world">helloworld</string>
    <string name="loading">loading...</string>
    <string name="insert_sort">insert_sort</string>
    <string name="select_sort">select_sort</string>
    <string name="bubble_sort">bundle_sort</string>
    <string name="bubbbule_sort">bubbule_sort</string>
    <string name="quick_sort">quick_sort</string>
    <string name="merge_sort">merge_sort</string>
    <string name="heap_sort">heap_sort</string>
    <string name="shell_sort">shell_sort</string>
    <string name="original_sequence">original_sequence</string>
    <string name="sorted_sequence">sorted_sequence</string>
    <string-array name="channel_names">
        <item>头条</item>
        <item>国内</item>
        <item>国际</item>
        <item>财经</item>
        <item>科技</item>
        <item>社会</item>
        <item>体育</item>
    </string-array>
    <string-array name="ignore_words">
        <item>浏览原图</item>
        <item>视频下载</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="search_name">请输入你想要查找的文件名</string>
    <string name="open_file_err">open file error</string>
    <string name="sort">sort</string>
    <string name="person">person</string>
    <string name="search">查询</string>
    <string name="tv_search">没有您想搜索的新闻</string>
    <string name="loaded_fulldata">已经加载全部数据</string>
    <string name="call_phone">打电话</string>
    <string name="send_messg">发短信</string>
    <string name="hint_phonenumber">手机号码：</string>
    <string name="hint_homenumber">固话号码：</string>
    <string name="anim_zhgcun">移动到中关村</string>
    <string name="goToHere">街景</string>
    <string name="search_location">搜索</string>
    <string name="compute">计算距离</string>
    <string name="save">保存</string>
    <string name="load">加载</string>
    <string name="et_searchlocation">请输入您想查找的地点</string>
    <string name="btn_copy">copy</string>
    <string name="btn_exit">exit</string>
    <string name="btn_nfc">nfc</string>
    <string name="light1_string">开启闪光灯</string>
    <string name="backbtn_string">返回</string>
    <string name="takepic_btn_string">照相</string>
    <string name="txt_align_edge">对齐边框</string>
</resources>