<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_default" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/toolbar1"
        android:layout_below="@id/appbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_copy"
            android:textColor="@color/text_button"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNfc"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btn_nfc"
            android:textColor="@color/text_button"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_exit"
            android:textColor="@color/text_button"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/pnl_margin"
        android:fillViewport="true"
        android:scrollbars="none" >

        <TextView
            android:id="@+id/board"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</RelativeLayout>